tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unbraced-match-body.wyst
module demo
enum State { idle }
fn main(state: State) { match state return }
